# WQ_TOOL

./: .gitignore  README.md  main.py  pyproject.toml
adapters/: __init__.py  brain_api_adapter.py  brain_manual_adapter.py  simulation_adapter.py
alpha/: __init__.py  ast_nodes.py  evaluator.py  parser.py  validator.py
backtest/: __init__.py  costs.py  engine.py  metrics.py  neutralization.py  portfolio.py  simulation.py
cli/: __init__.py  app.py
config/: __init__.py  brain_full.yaml  builders.py  default.yaml  defaults.py  dev.yaml  loader.py  research.yaml  strict.yaml  validators.py
core/: __init__.py  brain_checks.py  brain_rejections.py  config.py  logging.py  quality_score.py  run_context.py  signatures.py
data/: __init__.py  field_registry.py  loader.py  schema.py  split.py  validation.py
docs/: alpha_performance_quality_analysis_2026-04-25.md  alpha_performance_quality_analysis_2026-04-26.md  alpha_pipeline_spec.md  architecture.md  code_quality_report_for_claude.md  configuration.md  current_brain_search_space_for_claude.md  development.md  next_round_budget_recommendation_2026-04-24.md  pipeline.md  project_context.md  recent_changes_report_2026-05-03.md  wq_browser_export.md
domain/: __init__.py  brain.py  candidate.py  exceptions.py  metrics.py  simulation.py
evaluation/: __init__.py  alpha_distance.py  critic.py  dedup.py  filtering.py  multi_objective_selection.py  ranking.py  stability.py  submission.py
examples/: sample_expressions.txt  sample_run.md
features/: __init__.py  operator_catalog.py  operators.py  registry.py  transforms.py
generator/: __init__.py  crossover.py  diversity_tracker.py  engine.py  genome.py  genome_builder.py  grammar.py  guardrails.py  guided_generator.py  mutation_policy.py  mutator.py  novelty.py  operator_diversity.py  repair_policy.py  seed_utils.py  templates.py
memory/: __init__.py  case_memory.py  pattern_memory.py
registry/: __init__.py  (+2 more)
(+416 files in other folders)
