[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wq-tool"
version = "0.2.0"
description = "WorldQuant-style alpha research tooling for local data and iterative factor discovery."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
wq-tool = "cli.app:main"

[tool.setuptools.packages.find]
include = [
  "alpha*",
  "backtest*",
  "cli*",
  "core*",
  "data*",
  "evaluation*",
  "features*",
  "generator*",
  "memory*",
  "services*",
  "storage*",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
exclude = ["Document/", "examples/"]

[tool.coverage.run]
source = ["alpha", "backtest", "cli", "core", "data", "evaluation", "features", "generator", "memory", "services", "storage"]

[tool.coverage.report]
show_missing = true
